# codestacker-2025

./: .env.sample  .gitignore  README.md  app.py  create_project_structure.ps1  create_project_structure.sh  demo.txt  docker-compose.yml  eda_and_modeling.ipynb  exploration,.py  exploration.ipynb  extract.py  pyproject.toml  react_fastapi.md  requirements copy.txt  requirements-runtime.txt  requirements.txt  run.sh  trial.py  trial2.py  trial_3.py
mlflow/: mlflow.yml  start_mlflow.sh
mlflow-db/: mlflow.db
model_artifacts/: metadata.pkl  svd_transformer.pkl  tfidf_vectorizer.pkl
model_artifacts/latest/: density_mappings.pkl  grid_time_mappings.pkl  time_space_mappings.pkl
src/codestacker/: README.md  __init__.py
src/codestacker/app/: Dockerfile.streamlit  app.py
src/codestacker/train/: .dockerignore  Dockerfile.mlflow  Dockerfile.train  __init__.py  logger.py  train.py
src/codestacker_2025/backend/: .gitignore
